cargo clippy & cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "img2tex"
 version = "0.1.0"
 edition = "2021"
 authors = ["Nishant Joshi <joshinishant@duck.com>"]
+description = "A CLI and/or GUI application for extracting text from images"
+license-file = "LICENSE"
+keywords = [ "gui", "ocr", "image", "text" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
